# leptos-query

./: .envrc  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  COMPARISON_ANALYSIS.md  CONTRIBUTING.md  Cargo.toml  INTEGRATION_TESTS_STATUS.md  LICENSE  MIGRATION.md  Makefile  README.md  RELEASE_ASSESSMENT.md  RELEASE_COMPLETE.md  RELEASE_NOTES.md  TESTING_RESULTS.md  flake.nix  mutagen.toml  test-app.html
.github/workflows/: badges.yml  ci.yml  docs.yml  performance-monitor.yml  playwright.yml  release.yml
benches/: query_benchmarks.rs
contracts/compatibility/: version-matrix.json
contracts/openapi/: leptos-query-api.yaml
contracts/schemas/: error_schemas.json  query_key.json  query_options.json  retry_config.json
demo/: Cargo.toml  README.md  Trunk.toml  index.html  package.json  playwright.config.ts  static-demo.html  styles.css
demo/src/: api.rs  app.rs  components.rs  main.rs  simple_app.rs  simple_main.rs  types.rs
demo/tests/: demo_requirements.spec.ts  leptos-query.spec.ts  pre_commit_hooks.spec.ts  simple-demo.spec.ts  tdd-enhancements.spec.ts
docs/: ADVANCED_FEATURES_ROADMAP.md  ECOSYSTEM_INTEGRATION_ANALYSIS.md  IMPLEMENTATION_COMPLETE.md  PERFORMANCE_MONITORING.md  README.md  RELEASE_NOTES.md  ROADMAP_SUMMARY.md  ROADMAP_UPDATE_SUMMARY.md  TDD_IMPLEMENTATION_GUIDE.md  TDD_IMPLEMENTATION_SUMMARY.md  TDD_WORKSHOP.md  V0.5.0_ROADMAP.md  api-reference.md  community.md  design.md  ecosystem.md  migration.md
docs/community/: AI_GENERATED_DISCLAIMER.md  CONTRIBUTING.md
docs/contracts/: API_CONTRACT_STRATEGY.md  CONTRACT_TESTING_GUIDE.md  IMPLEMENTATION_SUMMARY.md  README.md
docs/development/: contributing.md  pre-commit.md
docs/features/: devtools.md
docs/guides/: common-patterns.md  quick-start.md
docs/planning/: api-design.md  leptos-0-8-compatibility.md  leptos-0.8-compatibility.md  technical-specification.md
docs/status/: COMPATIBILITY_STATUS.md  DOCUMENTATION_STATUS.md  LIBRARY_STATUS.md  TANSTACK_QUERY_COMPARISON.md
docs/testing/: test-strategy.md
docs/user/: getting-started.md
examples/: advanced_usage.rs  basic.rs  basic_usage.rs  blog-app.html  devtools_example.rs  devtools_example.rs.broken  infinite_queries.rs  playwright.config.ts  simple_infinite.rs  todo-app.html  weather-app.html
examples/tests/: real_world_examples.spec.ts
performance_results/: benchmark_output_2025-09-04_15-40-19.txt  report_2025-09-04_15-40-19.md
scripts/: install-pre-commit.sh  performance_monitor.sh  simple_performance_monitor.sh  test-ci.sh
src/: lib.rs  types.rs
src/client/: mod.rs
src/compat/: components.rs  effects.rs  mod.rs  signals.rs
src/dedup/: mod.rs
src/devtools/: mod.rs
src/infinite/: mod.rs
src/mutation/: mod.rs
src/optimistic/: mod.rs
src/persistence/: mod.rs
src/query/: mod.rs
src/retry/: mod.rs
src/sync/: mod.rs
src/types/: mod.rs
tests/: advanced_sync_tests.rs  api_stability_tests.rs  basic_tests.rs  devtools_tests.rs  integration_tests.rs  leptos_08_compatibility_tests.rs  leptos_app_validation.spec.ts  persistence_backend_tests.rs  pre_commit_hooks.spec.ts  query_client_api_tests.rs  sync_integration_tests.rs  v050_release_requirements.spec.ts
tests/contracts/: api_evolution_tests.rs  compatibility_tests.rs  pact_consumer_tests.rs  schema_validation_tests.rs
tests/mutation/: manual_mutation_tests.rs  mutation_tests.rs
tests/property/: cache_invariants.proptest-regressions  cache_invariants.rs
tests/unit/: cache_operations_tests.rs  query_lifecycle_tests.rs
tests/utils/: mod.rs
