[package]
name = "leptos-query-rs"
version = "0.1.0"
edition = "2021"
authors = ["CloudShuttle Team"]
description = "A powerful, type-safe data fetching and caching library for Leptos applications, inspired by React Query/TanStack Query"
license = "MIT"
repository = "https://github.com/CloudShuttle/leptos-query"
documentation = "https://docs.rs/leptos-query-rs"
homepage = "https://github.com/CloudShuttle/leptos-query"
readme = "README.md"
keywords = ["leptos", "query", "cache", "data-fetching", "reactive", "web", "wasm", "rust"]
categories = ["web-programming", "caching", "asynchronous"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core Leptos dependencies
leptos = { version = "0.6.14", features = ["csr", "ssr"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async and futures
tokio = { version = "1.0", features = ["sync", "time"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"

# Base64 encoding for persistence
base64 = "0.21"

# Web APIs
web-sys = "0.3"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# Utility
uuid = { version = "1.0", features = ["v4", "js"] }

[dependencies.getrandom]
version = "0.2"
features = ["js"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["leptos-0-6", "csr"]
leptos-0-6 = []
leptos-0-8 = []
csr = ["leptos/csr"]
ssr = ["leptos/ssr", "tokio/rt-multi-thread"]
hydrate = ["leptos/hydrate"]

# Optional features
devtools = []
persistence = []
offline = ["persistence"]