[package]
name = "leptos-query-rs"
version = "0.2.0"
edition = "2021"
authors = ["CloudShuttle Team"]
description = "A powerful, type-safe data fetching and caching library for Leptos 0.8 applications"
license = "MIT"
repository = "https://github.com/cloud-shuttle/leptos-query-rs"
keywords = ["leptos", "query", "cache", "data-fetching", "rust", "wasm", "web"]
categories = ["web-programming", "asynchronous", "caching"]
readme = "README.md"
rust-version = "1.70"

[dependencies]
# Core Leptos 0.8 dependencies
leptos = { version = "0.8", features = ["csr", "ssr"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "js", "serde"] }

# Error handling
thiserror = "1.0"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# Futures
futures = "0.3"

# Web APIs
web-sys = { version = "0.3", features = ["console"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# Development dependencies
[dev-dependencies]
wasm-bindgen-test = "0.3"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[features]
default = ["csr"]
csr = []
ssr = ["tokio/rt-multi-thread"]
hydrate = []
devtools = []
persistence = []
offline = ["persistence"]

[lib]
name = "leptos_query_rs"
path = "src/lib.rs"

[[example]]
name = "basic_usage"
required-features = ["csr"]

[[example]]
name = "advanced_usage"
required-features = ["csr"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]