[package]
name = "leptos-query-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr", "ssr"] }
leptos_meta = { version = "0.6", features = ["csr", "ssr"] }
leptos_router = { version = "0.6", features = ["csr", "ssr"] }
leptos_query = { path = "../", features = ["csr", "ssr"], package = "leptos-query" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "0.2"
log = "0.4"
gloo-timers = "0.3"
chrono = { version = "0.4", features = ["serde"] }
