[package]
name = "leptos-query-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6.14", features = ["csr"] }
leptos_query_rs = { path = "../", features = ["csr"], package = "leptos-query-rs" }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "0.2"
log = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }
