[package]
name = "leptos-query-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_router = { version = "0.8" }
leptos_meta = { version = "0.8" }
leptos-query-rs = { path = ".." }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }
gloo-timers = { version = "0.3", features = ["futures"] }
console_error_panic_hook = "0.1"
rand = "0.8"

[[bin]]
name = "leptos_query_demo"
path = "src/main.rs"
